--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paycelint</title>
+    <link rel="stylesheet" href="./normalize.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="paycelint_header">
-        <div class="paycelint__container">
+        <div class="paycelint_container">
             <div class="paycelint_header__row">
-                
+                <p class="paycelint_logo">Paycelint</p>
+                <ul class="paycelint_header__menu">
+                    <a href="#1"><li class="paycelint_header__menu__link">Преимущество</li></a>
+                    <a href="#2"><li class="paycelint_header__menu__link">Сообщество</li></a>
+                    <a href="#3"><li class="paycelint_header__menu__link">Основы трейдинга</li></a>
+                </ul>
             </div>
         </div>
     </header>
