--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,38 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header class="paycelint_header">
         <div class="paycelint_container">
             <div class="paycelint_header__row">
                 <p class="paycelint_logo">Paycelint</p>
                 <ul class="paycelint_header__menu">
-                    <a href="#1"><li class="paycelint_header__menu__link">Преимущество</li></a>
-                    <a href="#2"><li class="paycelint_header__menu__link">Сообщество</li></a>
-                    <a href="#3"><li class="paycelint_header__menu__link">Основы трейдинга</li></a>
+                    <a href="#1">
+                        <li class="paycelint_header__menu__link">Преимущество</li>
+                    </a>
+                    <a href="#2">
+                        <li class="paycelint_header__menu__link">Сообщество</li>
+                    </a>
+                    <a href="#3">
+                        <li class="paycelint_header__menu__link">Основы трейдинга</li>
+                    </a>
                 </ul>
             </div>
         </div>
     </header>
-    
+    <main class="paycelint_main">
+        <div class="paycelint_banner_back">
+            <div class="paycelint_container">
+                <div class="paycelint__banner">
+                    <h1 class="paycelint__banner__title">TRADING</h1>
+                    <button class="paycelint__banner__btn"><img src="./image/btn__bottom.svg" alt=""></button>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
 </body>
+
 </html>
