--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Paycelint</title>
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./media.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
             <div class="paycelint_container">
                 <div class="paycelint__banner">
                     <h1 class="paycelint__banner__title">TRADING</h1>
-                    <button class="paycelint__banner__btn"><img src="./image/btn__bottom.svg" alt=""></button>
+                    <button class="paycelint__banner__btn"><img src="./image/btn__bottom.svg" alt="btn" class="btn_width"></button>
                 </div>
             </div>
         </div>
