--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
                 </div>
             </div>
         </div>
+        <div class="paycelint_container">
+            <div class="paycelint__learn">
+                <h2 class="paycelint__learn__title">Чему вы  <br><span class="learn__title_down">научитесь?</span></h2>
+                <div class="paycelint__learn__blocks">
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Разработка собственной стратегии торговли</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Фильтрация новостных источников для выделения важной информации</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Расчет и контроль рисков с учетом психологических аспектов</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Анализ стратегий других трейдеров</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Работа с торговыми терминалами</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Соблюдение баланса собственных и заимствованных средств</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Оценка торговых инструментов с использованием фундаментального и технического анализа</p></div>
+                    <div class="paycelint__learn__block"><p class="paycelint__learn__block__text">Составление торгового плана трейдера</p></div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
